# hltb-proxy

./: .gitignore  .mergify.yml  CHANGELOG.md  Cargo.toml  Dockerfile  cliff.toml  fly.toml  justfile  prepare-release.ps1  readme.MD  rust-toolchain.toml
.github/workflows/: cargo-audit-check.yml  docker-image.yml  fly-deploy.yml  lint.yml  test.yml
benchmark/: benchmark.js  game-list.txt  gameList.js  readme.MD  smoke.js
deploy/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  prometheus-monitor.yaml  service.yaml
resources/: requests.http
resources/tests/: _app-43749832a8c6a98a.js  _app-hash.js  _app-hash_lookup.js  index_page.html
src/: http.rs  main.rs  rest.rs
src/hltb/: client.rs  mod.rs  models.rs
