[package]
name = "hltb-proxy"
version = "0.3.0"
edition = "2021"
description = "Lightweight proxy for How Long to Beat API, with caching and CORS support"
authors = [
    "Kennedy Oliveira <kennedyroliveira@gmail.com>"
]
publish = false
repository = "https://github.com/kennedyoliveira/hltb-proxy"

[dependencies]
# utils
color-eyre = "0.6"
urlencoding = "2.1"
scraper = "0.20"
moka = { version = "0.12", features = ["future"] }
blake2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
thiserror = "1.0"
regex = "1.11.0"
bytes = "1.8"

# async
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "parking_lot", "signal"] }
async-recursion = "1.1"

# http
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
reqwest = { version = "0.12", features = ["gzip"] }
tower-http = { version = "0.6", features = ["compression-full", "trace", "cors"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-logfmt = "0.3"
log = "0.4.22"
prometheus = "0.13"
axum-otel-metrics = { git = "https://github.com/kennedyoliveira/axum-otel-metrics" }

[dev-dependencies]
tracing-test = "0.2"
axum-test = { version = "16.3", features = ["reqwest"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"

[workspace.metadata.dist.dependencies.apt]
libssl-dev = { version = '*', targets = [
    "aarch64-unknown-linux-gnu",
] }
pkg-config = { version = '*', targets = [
    "aarch64-unknown-linux-gnu",
] }

